--- a/templates/page.html
+++ b/templates/page.html
@@ -1,73 +1,154 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title>Sample Page</title>
+  <title>Annotating Monologues</title>
   <meta name="description" content="A sample ExternalQuestion">
   <meta name="author" content="SitePoint">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/smoothness/jquery-ui.css">
-  <link href="https://s3.amazonaws.com/mturk-public/bs30/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='materialize.min.js') }}"></script>
+  <style>
+  </style>
 </head>
 
 <body>
-  <div id="wrapper">
-  Click the image to finish!
-  <img src="{{ url_for('static', filename='example_static_image.jpg') }}" id = "example" alt="example">
+  <div class="container">
+    <div class="section">
+      <main>
+        <center>
+          <form class="col s16">
+            <div class="jumbotron">
+              <h1>Monologue Annotation</h1>
+            </div>
+            <!--
+          EXAMPLE FROM GITHUB
+          Click the image to finish!
+          <img src="{{ url_for('static', filename='example_static_image.jpg') }}" id="example" alt="example">-->
+            <!--
+          EXAMPLE YOUTUBE EMBED
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-JPOoFkrh94?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-  <div id="end-dialog-message" title="Ready to submit?">
+          -->
+
+            <div class="col s6">
+              <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/{{  youtubeid  }}?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <!-- DEFAULT EXAMPLE DIALOGUE
+            <div class='row'>
+              <div id="end-dialog-message" title="Ready to submit?">
+              </div>
+              <form id="endForm" action="{{ name.amazon_host }}" method="POST">
+                <input type="hidden" id="user-input" value="" name="user-input" />
+                <input type="hidden" id="assignmentId" value="{{ name.assignment_id }}" name="assignmentId" />
+                <input type="hidden" id="workerId" value="{{ name.worker_id }}" name="workerId" />
+                <input type="hidden" id="hitId" value="{{ name.hit_id }}" name="hitId" />
+              </form>
+            </div>-->
+
+            <form class="center-align">
+              <div class="input-field col s3">
+                <textarea id="annotations" class="materialize-textarea"></textarea>
+                <label for="annotations" style="text-align: center;">Enter your annotations</label>
+              </div>
+            </form>
+
+            <button id="done" class="waves-effect waves-light btn modal-trigger">Done</button>
+
+            <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Help</a>
+            <div id="modal1" class="modal">
+              <div class="modal-content">
+                <h4>How to Annotate</h4>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/muZcJXlfCWs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+              </div>
+            </div>
+            <div id="finishedmodal" class="modal">
+              <div class="modal-content">
+                <h4>Finished?</h4>
+                <p>Here's what you wrote:</p>
+                <p id="check"></p>
+              </div>
+              <form id="endForm" action="{{ name.amazon_host }}" method="POST">
+                <input type="hidden" id="user-input" value="" name="user-input" />
+                <input type="hidden" id="assignmentId" value="{{ name.assignment_id }}" name="assignmentId" />
+                <input type="hidden" id="workerId" value="{{ name.worker_id }}" name="workerId" />
+                <input type="hidden" id="hitId" value="{{ name.hit_id }}" name="hitId" />
+              </form>
+              <div class="modal-footer">
+                <a id="finalSubmit" class="waves-effect waves-green btn-flat">Submit</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Go Back</a>
+              </div>
+            </div>
+
+        </center>
+      </main>
+    </div>
   </div>
-  <form id = "endForm" action="{{ name.amazon_host }}" method="POST">
-      <input type="hidden" id="user-input" value="" name="user-input"/>
-      <input type="hidden" id="assignmentId" value="{{ name.assignment_id }}" name="assignmentId"/>
-      <input type="hidden" id="workerId" value="{{ name.worker_id }}" name="workerId"/>
-      <input type="hidden" id="hitId" value="{{ name.hit_id }}" name="hitId"/>
-  </form>
-
 </body>
 
 <script>
+  $(document).ready(function() {
+    $(".modal").modal();
+    //$('#modal1').modal("open");
+  });
 
-  
 
-  function endDialog()
-  {
-    $( "#end-dialog-message" ).dialog({
+  function endDialog() {
+    /*
+    $("#end-dialog-message").dialog({
 
       resizable: false,
-      height:140,
+      height: 140,
       modal: true,
       buttons: {
         "Submit Results?": function() {
           var string = "whateverFinalResultsWeWantToPass";
           $('input[name="user-input"]').val(string);
           $("#endForm").submit();
-          $( this ).dialog( "close" );
+          $(this).dialog("close");
           // alert("Just in case, this blacks out the screen");
-          $("#wrapper").remove();
+          //$("#wrapper").remove();
           $("body").append('<div id="endsplash" style ="height:100%;width:100%;top:0px;left:0px;z-index:999;background:rgba(0,0,0,1);"> </div>');
         },
         Cancel: function() {
-          $( this ).dialog( "close" );
+          $(this).dialog("close");
         }
       }
     });
-    
-    
+    */
+    $('#finishedmodal').modal('open');
+    $('#check').text($("#annotations").val());
   }
 
-  $('#example').click(function(){
-    endDialog();
+  $('#finalSubmit').click(function() {
+    $("#endForm").submit();
   });
 
-  </script>
+  $('#done').click(function() {
+    endDialog();
+  });
+</script>
 
 </html>
