--- a/templates/page.html
+++ b/templates/page.html
@@ -91,7 +91,7 @@
                 <p id="check"></p>
               </div>
               <form id="endForm" action="{{ name.amazon_host }}" method="POST">
-                <input type="hidden" id="user-input" value="" name="user-input" />
+                <input type="hidden" id="user-input" value="test123" name="user-input" />
                 <input type="hidden" id="assignmentId" value="{{ name.assignment_id }}" name="assignmentId" />
                 <input type="hidden" id="workerId" value="{{ name.worker_id }}" name="workerId" />
                 <input type="hidden" id="hitId" value="{{ name.hit_id }}" name="hitId" />
@@ -143,6 +143,7 @@
   }
 
   $('#finalSubmit').click(function() {
+    $("#user-input").val($("#annotations").val());
     $("#endForm").submit();
   });
 
