--- a/templates/page.html
+++ b/templates/page.html
@@ -51,7 +51,7 @@
           -->
 
             <div class="col s6">
-              <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/{{  youtubeid  }}?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/{{  name.youtubeid  }}?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <!-- DEFAULT EXAMPLE DIALOGUE
             <div class='row'>
